--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,5 +11,7 @@
     <string name="contact_number">Contact Number</string>
     <string name="signout">SignOut</string>
     <string name="name">Name</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="reset_password">Reset Password</string>
 
 </resources>
