--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,6 @@
     <string name="reset_password">Reset Password</string>
     <string name="message">Message</string>
     <string name="sender">Sender</string>
+    <string name="time">Time</string>
 
 </resources>
