--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,7 @@
     <string name="message">Message</string>
     <string name="sender">Sender</string>
     <string name="time">Time</string>
+    <string name="address">Address</string>
+    <string name="help_needed">Help Needed</string>
 
 </resources>
